# etl

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-app.yml
dagster-etl/: assets.py
etl/: config.py  load_stations.py
tests/: test_dummy.py
